@@ -22,7 +22,6 @@ import java.io.OutputStream;
 import java.io.File;
 import java.net.URI;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.nio.file.FileSystemNotFoundException;
 import java.nio.charset.Charset;
@@ -162,7 +161,7 @@ public abstract class URIDataStore extends DataStore implements StoreResource, R
             if (location == null) {
                 return new Path[0];
             } else try {
-                path = Paths.get(location);
+                path = Path.of(location);
             } catch (IllegalArgumentException | FileSystemNotFoundException e) {
                 throw new DataStoreException(e);
             }
